--- a/index.html
+++ b/index.html
@@ -862,10 +862,10 @@
             Why We're Building This
           </h3>
           <p style="color: #9ca3af; line-height: 1.6; margin-bottom: 20px">
-            "I realized I was spending 9+ hours on my phone daily while telling
+            "I realized I was spending hours on my phone daily while telling
             people I 'barely use social media.' The shame was real, but not
             enough to change. Only when I started sharing my screen time with my
-            accountability partner did I actually reduce it by 70%."
+            accountability partner did I actually reduce it in a meaningful way."
           </p>
           <div style="color: #fff; font-weight: 600">— The FocusFlow Team</div>
         </div>
