Swap instant notifcations section with app-specific section.

--- a/public/index.html
+++ b/public/index.html
@@ -724,7 +724,7 @@
                   <div class="friend-item">
                     <div class="friend-info">
                       <div class="friend-avatar">S</div>
-                      <div class="friend-name">sarah_dev</div>
+                      <div class="friend-name">sarah_dev • TikTok 3h</div>
                     </div>
                     <div class="friend-time">7h 12m</div>
                   </div>
@@ -783,10 +783,11 @@
         <div class="features-grid">
           <div class="feature-card">
             <span class="feature-icon">🎯</span>
-            <h3>Real-Time Accountability</h3>
+            <h3>Real-Time Accountability & Alerts</h3>
             <p>
-              Your friends see your screen time instantly. No more hiding behind
-              "I barely use my phone" while scrolling for hours.
+              Your friends see your screen time instantly and get notified when
+              you exceed goals. No more hiding behind "I barely use my phone"
+              while scrolling for hours.
             </p>
           </div>
 
@@ -800,11 +801,12 @@
           </div>
 
           <div class="feature-card">
-            <span class="feature-icon">⚡</span>
-            <h3>Instant Notifications</h3>
+            <span class="feature-icon">📱</span>
+            <h3>App-Specific Transparency</h3>
             <p>
-              Friends get notified when you exceed goals. The social pressure
-              alone will transform your habits overnight.
+              See exactly how much time friends spend on TikTok, Instagram, or
+              any app. Full visibility means real accountability for your
+              digital habits.
             </p>
           </div>
         </div>
