Change year to 2025 and get rid of app in image.

--- a/public/index.html
+++ b/public/index.html
@@ -724,7 +724,7 @@
                   <div class="friend-item">
                     <div class="friend-info">
                       <div class="friend-avatar">S</div>
-                      <div class="friend-name">sarah_dev • TikTok 3h</div>
+                      <div class="friend-name">sarah_dev 3h</div>
                     </div>
                     <div class="friend-time">7h 12m</div>
                   </div>
@@ -892,7 +892,7 @@
     <footer class="footer">
       <div class="container">
         <p>
-          &copy; 2024 FocusFlow. Built for people serious about productivity.
+          &copy; 2025 FocusFlow. Built for people serious about productivity.
         </p>
       </div>
     </footer>
