--- a/public/index.html
+++ b/public/index.html
@@ -724,7 +724,7 @@
                   <div class="friend-item">
                     <div class="friend-info">
                       <div class="friend-avatar">S</div>
-                      <div class="friend-name">sarah_dev 3h</div>
+                      <div class="friend-name">sarah_dev</div>
                     </div>
                     <div class="friend-time">7h 12m</div>
                   </div>
