Update call to action

--- a/public/index.html
+++ b/public/index.html
@@ -872,8 +872,8 @@
       <div class="container">
         <h2>Ready to reclaim your focus?</h2>
         <p>
-          Join thousands of professionals using social accountability to build
-          better digital habits. Coming to iOS & Android in 2025.
+          Ready to stop hiding your screen time from friends? Get early access
+          to FocusFlow when it launches in 2025.
         </p>
 
         <form class="email-form" style="max-width: 400px; margin: 0 auto">
